--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "slate": "^0.44.10",
+    "slate-react": "^0.21.16"
   },
   "scripts": {
     "start": "react-scripts start",
